--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -26,6 +26,8 @@ body{
 }
 
 .main {
+  scroll-padding-top: 160px;
+
   @include mq(md) {
     position: relative;
     // max-width: $content-width;
