--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -1,7 +1,6 @@
 // Typography
 
-$body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
-  roboto, "Helvetica Neue", arial, sans-serif !default;
+$body-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $mono-font-family: "SFMono-Regular", menlo, consolas, monospace !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
@@ -28,7 +27,7 @@ $font-size-10-sm: 48px !default;
 
 $white: #fff !default;
 $grey-dk-000: #959396 !default;
-$grey-dk-100: #5c5962 !default;
+$grey-dk-100: #333 !default;
 $grey-dk-200: #44434d !default;
 $grey-dk-250: #302d36 !default;
 $grey-dk-300: #27262b !default;
