--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -19,7 +19,9 @@ h3,
 .text-gamma {
   @include fs-5;
 }
-
+h3{
+  font-size: 25px!important;
+}
 h4,
 .text-delta {
   @include fs-2;
@@ -28,11 +30,20 @@ h4,
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
-
-h4 code {
-  text-transform: none;
+h4{
+  font-size: 19px!important;
+  font-weight: bold;
 }
-
+.highlight code,.language-javascript code {
+  text-transform: none;
+  background: rgba(0,0,0,0.05);
+  padding: 3px!important;
+  border-radius: 3px;
+  display: inline-block;
+}
+p{
+  font-size: 14px;
+}
 h5,
 .text-epsilon {
   @include fs-3;
