--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -50,6 +50,7 @@ h5,
 h6,
 #toctitle {
   margin-top: 0;
+  letter-spacing:0!important;
   margin-bottom: 1em;
   font-weight: 500;
   line-height: $body-heading-line-height;
