[EX-2029]Sub Account

--- a/_includes/sidebar/rest-api.html
+++ b/_includes/sidebar/rest-api.html
@@ -66,6 +66,18 @@
               <li><a href="#close-user-data-stream-user_stream">Close user data stream (USER_STREAM)</a></li>
             </ul>
           </li>
+          <li><a href="#sub-account-endpoints">Sub-account Endpoints</a>
+            <ul class="nav-list ">
+              <li><a href="#sub-account-create--for-master-account">Sub-account create  (For Master Account)</a></li>
+              <li><a href="#sub-account-transfer--master-to-sub-sub-to-master">Sub-account transfer  (master to sub, sub to master)</a></li>
+              <li><a href="#query-sub-account-list-for-master-account">Query Sub-account List (For Master Account)</a></li>
+              <li><a href="#query-sub-account-asset-for-master-account">Query Sub-account asset (For Master Account)</a></li>
+              <li><a href="#get-ip-whitelist-for-a-sub-account-api-key-for-master-account">Get IP WHITELIST for a Sub-account API Key (For Master Account)</a></li>
+              <li><a href="#update-ip-whitelist-for-a-sub-account-api-key-for-master-account">Update IP WHITELIST for a Sub-account API Key (For Master Account)</a></li>
+              <li><a href="#query-universal-transfer-history-for-master-account">Query Universal Transfer History (For Master Account)</a></li>
+              <li><a href="#sub-account-transfer-history-for-sub-account">Sub-account Transfer History (For Sub-account)</a></li>
+            </ul>
+          </li>
           <li><a href="#filters">Filters</a>
             <ul class="nav-list ">
               <li><a href="#symbol-filters">Symbol filters</a>
