--- a/_includes/sidebar/rest-api.html
+++ b/_includes/sidebar/rest-api.html
@@ -29,6 +29,15 @@
               <li><a href="#exchange-information">Exchange information</a></li>
             </ul>
           </li>
+          <li><a href="#wallet-endpoints">Wallet endpoints</a>
+            <ul class="nav-list ">
+              <li><a href="#all-coins-information-user_data">All Coins' Information (USER_DATA)</a></li>
+              <li><a href="#deposit-address-user_data">Deposit Address (USER_DATA)</a></li>
+              <li><a href="#withdrawuser_data">Withdraw(USER_DATA)</a></li>
+              <li><a href="#deposit-history-user_data">Deposit History (USER_DATA)</a></li>
+              <li><a href="#withdraw-history-user_data">Withdraw History (USER_DATA)</a></li>
+            </ul>
+          </li>
           <li><a href="#market-data-endpoints">Market Data endpoints</a>
             <ul class="nav-list ">
               <li><a href="#order-book">Order book</a></li>
