--- a/_includes/sidebar/rest-api.html
+++ b/_includes/sidebar/rest-api.html
@@ -97,5 +97,17 @@
           </li>
         </ul>
       </li>
+      <li><a href="#merchant-endpoints">Merchant Endpoints</a>
+        <ul class="nav-list ">
+          <li><a href="#Signature">Signature</a></li>
+          <li><a href="#Invoicing">Invoicing</a>
+            <ul class="nav-list ">
+              <li><a href="#creating-invoices">Creating Invoices</a></li>
+              <li><a href="#retrieving-invoices">Retrieving Invoices</a></li>
+            </ul>
+          </li>
+          <li><a href="#invoice-callbacks">Invoice Callbacks</a></li>
+        </ul>
+      </li>
     </ul>
 
