--- a/_includes/sidebar/rest-api.html
+++ b/_includes/sidebar/rest-api.html
@@ -104,6 +104,7 @@
             <ul class="nav-list ">
               <li><a href="#creating-invoices">Creating Invoices</a></li>
               <li><a href="#retrieving-invoices">Retrieving Invoices</a></li>
+              <li><a href="#cancel-Invoices">Cancel Invoices</a></li>
             </ul>
           </li>
           <li><a href="#invoice-callbacks">Invoice Callbacks</a></li>
