--- a/_includes/sidebar/rest-api.html
+++ b/_includes/sidebar/rest-api.html
@@ -66,6 +66,7 @@
               <li><a href="#withdraw-order-history-withdrawal-order-which-withdraw-from-exchange-to-coins_ph-user_data">withdraw order history (withdrawal order which withdraw from exchange to coins_ph) (USER_DATA)</a></li>
               <li><a href="#deposit-order-historydeposit-order-which-deposit-from-coins_ph-to-exchange-user_data">deposit order history(deposit order which deposit from coins_ph to exchange) (USER_DATA)</a></li>
               <li><a href="#trade-fee-user_data">Trade Fee (USER_DATA)</a></li>
+              <li><a href="#query-balance-user_data">query balance (USER_DATA)</a></li>
               <li><a href="#transfers-query-user_data">query transfers (USER_DATA)</a></li>
               <li><a href="#transfers-user_data">transfers (USER_DATA)</a></li>
             </ul>
